tmp-monitoring-middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik-forwardauth
  namespace: monitoring
spec:
  forwardAuth:
    address: http://authentik-server.authentik.svc.cluster.local/outpost.goauthentik.io/auth/traefik
    authResponseHeaders:
    - X-authentik-username
    - X-authentik-groups
    - X-authentik-email
    - X-authentik-name
    - X-authentik-jwt
    - X-authentik-meta-jwks
    - X-authentik-meta-customattributes
    trustForwardHeader: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.kbtech.org`)
      kind: Rule
      middlewares:
        - name: authentik-forwardauth
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
  tls:
    secretName: kbtech-org-wildcard-tls
